# AI-Hackathon

./: .env.example  .gitignore  AGENT_TASKS.md  Basketball_1.ipynb  Basketball_Training.ipynb  CLAUDE.md  Makefile  ONBOARDING.md  PROGRESS.md  README.md  UPDATE.md  config.yaml  data.yaml  pyproject.toml  requirements.txt  segment_videos_with_segment_anything_3.ipynb
docs/: COMPUTE.md  DEFERRED.md  ML_DIRECTIONS.md  PIKA.md  TRACKING_HEALTH.md  TRAINING_BASKETBALL.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
notebooks/: colab_run.ipynb  colab_sam_tracking.ipynb  colab_yolo_tracking.ipynb  demo.ipynb  yolo_colab.ipynb
sports/: README.md
src/: __init__.py  config.py  pipeline.py
src/analysis/: __init__.py  tracking_health.py
src/data/: __init__.py  download.py  inspect.py  loader.py  overlay.py  video.py  yolo_dataset.py
src/eval/: __init__.py  hota.py
src/events/: __init__.py  bas.py
src/integrations/: __init__.py  tracking_observer.py
src/model/: __init__.py  replay.py  sam_api.py  sam_backend.py  sam_local.py  yolo_backend.py
src/obs/: __init__.py  arize.py  sentry.py
src/pitch/: __init__.py  homography.py  minimap.py
src/store/: __init__.py  redis_store.py
src/synthetic/: __init__.py  (+1 more)
tests/: test_arize.py  test_basketball_training.py  test_config.py  test_gpu.py  test_imports.py  test_loader.py  test_pika.py  test_redis_store.py  test_sports_analytics.py  test_tracking.py  test_tracking_health.py  test_tracking_observer.py
(+68 files in other folders)
