[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "soccertrack-pipeline"
version = "0.1.0"
description = "SAM 3.1 soccer game-state analysis on SoccerTrack v2 (tracking -> minimap -> HOTA)"
requires-python = ">=3.11"
# Runtime deps live in requirements.txt (pinned for the GPU box). Keep the
# editable-install lighter: just what's needed to import + run Phase 0 tooling.
dependencies = [
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "huggingface_hub>=0.24",
    "gdown>=5.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Pragmatic for a hackathon: catch real errors, don't nag on style.
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # long lines are fine; docstrings explain a lot
